--- a/scss/_0start.scss
+++ b/scss/_0start.scss
@@ -1,33 +1,33 @@
 @font-face {
     font-family: "GraphikLCG";
-    src: url(/fonts/GraphikLCG-Regular.woff), url(/fonts/GraphikLCG-Regular.woff2);
+    src: url(fonts/GraphikLCG-Regular.woff), url(/fonts/GraphikLCG-Regular.woff2);
     font-style: normal;
     font-display: normal;
 }
 @font-face {
     font-family: "TTHoves";
-    src: url(/fonts/TTHoves-Light.woff), url(/fonts/TTHoves-Light.woff2);
+    src: url(fonts/TTHoves-Light.woff), url(/fonts/TTHoves-Light.woff2);
     font-weight: 300;
     font-style: normal;
     font-display: normal;
 }
 @font-face {
     font-family: "TTHoves";
-    src: url(/fonts/TTHoves-Regular.woff), url(/fonts/TTHoves-Regular.woff2);
+    src: url(fonts/TTHoves-Regular.woff), url(/fonts/TTHoves-Regular.woff2);
     font-weight: 400;
     font-style: normal;
     font-display: normal;
 }
 @font-face {
     font-family: "TTHoves";
-    src: url(/fonts/TTHoves-Medium.woff), url(/fonts/TTHoves-Medium.woff2);
+    src: url(fonts/TTHoves-Medium.woff), url(/fonts/TTHoves-Medium.woff2);
     font-weight: 500;
     font-style: normal;
     font-display: normal;
 }
 @font-face {
     font-family: "TTHoves";
-    src: url(/fonts/TTHoves-DemiBold.woff), url(/fonts/GraphikLCG-Regular.woff2);
+    src: url(fonts/TTHoves-DemiBold.woff), url(/fonts/GraphikLCG-Regular.woff2);
     font-weight: 600;
     font-style: normal;
     font-display: normal;
