--- a/scss/_1header.scss
+++ b/scss/_1header.scss
@@ -54,6 +54,11 @@
             font-weight: 500;
             letter-spacing: 0.1296px;
             color: var(--color-white);
+
+             &:hover {
+                color: var(--color-green);
+                transition: 0.3s;
+            }
         }
     }
 }
