--- a/scss/_0start.scss
+++ b/scss/_0start.scss
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: "GraphikLCG";
+    font-family: GraphikLCG;
     src: url('fonts/GraphikLCG-Regular.woff') format('woff'), 
         url('fonts/GraphikLCG-Regular.woff2') format('woff2');
     font-style: normal;
     font-display: normal;
 }
 @font-face {
-    font-family: "TTHoves";
+    font-family: TTHoves;
     src: url('fonts/TTHoves-Light.woff') format('woff'), 
         url('fonts/TTHoves-Light.woff2') format('woff2');
     font-weight: 300;
@@ -14,7 +14,7 @@
     font-display: normal;
 }
 @font-face {
-    font-family: "TTHoves";
+    font-family: TTHoves;
     src: url('fonts/TTHoves-Regular.woff') format('woff'), 
         url('fonts/TTHoves-Regular.woff2') format('woff2');
     font-weight: 400;
@@ -22,7 +22,7 @@
     font-display: normal;
 }
 @font-face {
-    font-family: "TTHoves";
+    font-family: TTHoves;
     src: url('fonts/TTHoves-Medium.woff') format('woff'), 
         url('fonts/TTHoves-Medium.woff2') format('woff2');
     font-weight: 500;
@@ -30,7 +30,7 @@
     font-display: normal;
 }
 @font-face {
-    font-family: "TTHoves";
+    font-family: TTHoves;
     src: url('fonts/TTHoves-DemiBold.woff') format('woff'), 
         url('fonts/GraphikLCG-Regular.woff2') format('woff2');
     font-weight: 600;
